# raytracing-weekend-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
src/: camera.rs  hittable.rs  main.rs  materials.rs  ray.rs  scene.rs  sphere.rs  vec.rs  write_bmp.rs
