[package]
name = "raytracing-weekend-rs"
version = "0.1.0"
authors = ["l0calh05t <l0calh05t@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
nalgebra = "0.19.0"
ndarray = { version = "0.13.0", features = ["rayon"] }
rand = "0.7.2"
rayon = "1.3.0"
