[package]
name = "raytracing-weekend-rs"
version = "0.1.0"
authors = ["l0calh05t <l0calh05t@gmx.net>"]
edition = "2018"

[features]
use_oidn = ["oidn"]

[dependencies]
byteorder = "1.3.2"
nalgebra = "0.31.0"
ndarray = { version = "0.15.4", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.3.0"

oidn = { version = "=1.1.0", optional = true }
